--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "concurrently": "^5.2.0"
   }
 }
